syntax = "proto3";

package rivet.backend.pkg.party.invite_list;

import "proto/common.proto";

message Request {
	rivet.common.Uuid party_id = 1;
}

message Response {
	repeated rivet.common.Uuid invite_ids = 1;
}
